--- a/templates/kraken/application.add.twig
+++ b/templates/kraken/application.add.twig
@@ -16,7 +16,7 @@
 
                 <li>
                     <label for="app-coreid">CORE Application ID</label>
-                    <input type="numeric" name="core_id" id="app-coreid" maxlength="64" required value="{{ form.core_id }}" class="text-input">
+                    <input type="numeric" name="core_id" id="app-coreid" maxlength="64" required value="{{ form.core_id }}" class="text-input t40">
                 </li>
 
                 {% if available %}
