--- a/templates/user/users.twig
+++ b/templates/user/users.twig
@@ -30,7 +30,7 @@
                     <th>User ID</th>
                     <th>Username</th>
                     <th>Name</th>
-                    <th>E-mail</th>
+                    <th>Email</th>
                     {% if showtypes %}
                         <th></th>
                     {% endif %}
