--- a/templates/kraken/application/schema/schema.remove.twig
+++ b/templates/kraken/application/schema/schema.remove.twig
@@ -14,6 +14,12 @@
     <h4>Property Key</h4>
     <p><code>{{ schema.key }}</code></p>
 
+    <h4>Type</h4>
+    <p>
+        {{ schema.isSecure ? macros.icon('locked') : '' }}
+        {{ schema|formatSchemaType }}
+    </p>
+
     <h2>Environments</h2>
     {{ block('properties') }}
 
