--- a/templates/kraken/environment/environment.edit.twig
+++ b/templates/kraken/environment/environment.edit.twig
@@ -2,10 +2,10 @@
 {% import "_partial/macros.twig" as macros %}
 {% import "_partial-form/macros.twig" as form_macros %}
 
-{% set page_title = "Edit Environment: " ~ environment.name %}
+{% set page_title = "Edit Environment : " ~ environment.name %}
 
 {% block content %}
-    <h1>Edit <strong>{{ environment.name }}</strong> Environment</h1>
+    <h1>Edit Environment - <strong>{{ environment.name }}</strong></h1>
 
     <div class="form-wrapper">
         {{ form_macros.formErrors(errors) }}
