Clean up some titles

--- a/templates/kraken/application/schema/schema.add.twig
+++ b/templates/kraken/application/schema/schema.add.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-    <h1>Add Property Schema for <strong>{{ application.name }}</strong></h1>
+    <h1>Add Property Schema - <strong>{{ application.name }}</strong></h1>
 
     <h4>Application</h4>
     <p>{{ application.name }}</p>
