--- a/templates/kraken/configuration/latest/property.add.twig
+++ b/templates/kraken/configuration/latest/property.add.twig
@@ -3,11 +3,11 @@
 {% import "_partial-form/macros.twig" as form_macros %}
 {% set js_components = ["kraken.property"] %}
 
-{% set page_title = "Add Property" %}
+{% set page_title = "Add Property : " ~ {{ environment.name }} %}
 
 {% block content %}
 
-    <h1>{{ page_title }} for <strong>{{ environment.name }}</strong></h1>
+    <h1>{{ page_title }} - <strong>{{ environment.name }}</strong></h1>
 
     <h4>Application</h4>
     <p>{{ application.name }}</p>
