Add system status of agent to admin dashboard

--- a/templates/admin/audit.logs.twig
+++ b/templates/admin/audit.logs.twig
@@ -4,8 +4,7 @@
 {% set page_title = "Audit Log History" %}
 
 {% block content %}
-
-    <h1>Audit Log History</h1>
+    <h1>{{ page_title }}</h1>
 
     <p>Changes to database entities will be logged on this page.</p>
 
