--- a/templates/admin/cache.management.twig
+++ b/templates/admin/cache.management.twig
@@ -4,8 +4,7 @@
 {% set page_title = "Cache Management" %}
 
 {% block content %}
-
-    <h2>Cache Management</h2>
+    <h1>{{ page_title }}</h1>
 
     <ul class="button-list trailer">
         <li>
