--- a/templates/admin/global.message.twig
+++ b/templates/admin/global.message.twig
@@ -3,8 +3,7 @@
 {% set page_title = "Global Message" %}
 
 {% block content %}
-
-    <h2>Global Message</h2>
+    <h1>{{ page_title }}</h1>
 
     <h3>Current Message</h3>
     <div class="trailer">
