--- a/templates/admin/users.management.twig
+++ b/templates/admin/users.management.twig
@@ -14,7 +14,7 @@
         {{ macros.alert('info', alert_message) }}
     {% endif %}
 
-    <h2>User Management</h2>
+    <h1>{{ page_title }}</h1>
 
     {% if not pruned and not no_pruned %}
         <p>
