--- a/templates/queue.twig
+++ b/templates/queue.twig
@@ -8,4 +8,6 @@
 
     {% include '_partial-job/pending-table.twig' %}
 
+    <p><a class="btn" href="{{ urlFor('queue.history.page1') }}">Queue History</a></p>
+
 {% endblock %}
