--- a/templates/repository/status.twig
+++ b/templates/repository/status.twig
@@ -61,7 +61,7 @@
         <li><a class="btn btn--secondary" href="{{ urlFor('repository', {id: repo.id}) }}">Application</a></li>
 
         {% if kraken %}
-            <li><a class="btn btn--secondary" href="{{ urlFor('kraken.status', {application: kraken.id}) }}">{{ macros.icon('asterisk') }} Kraken</a></li>
+            <li><a class="btn btn--secondary" href="{{ urlFor('kraken.status', {application: kraken.id}) }}">{{ macros.icon('squid') }} Kraken</a></li>
         {% endif %}
     </ul>
 
