--- a/templates/_partial/layout.header.twig
+++ b/templates/_partial/layout.header.twig
@@ -42,7 +42,7 @@
                             {{ nav_macros.optionalNavlink('Admin', 'admin', 'watch') }}
                         {% endif %}
                         {{ nav_macros.optionalNavlink('Help', 'help', 'question') }}
-                        {{ nav_macros.optionalNavlink('Kraken', 'kraken', 'asterisk') }}
+                        {{ nav_macros.optionalNavlink('Kraken', 'kraken', 'squid') }}
 
                         <li>{{ nav_macros.navlink('Settings', 'settings', 'settings') }}</li>
                         <li>{{ nav_macros.navlink('Logout', 'logout', 'sign-out') }}</li>
