Fix some refs to old repository resources in api

--- a/public/views/queue.build.html
+++ b/public/views/queue.build.html
@@ -3,7 +3,7 @@
         <a href="{{ buildUrl }}">Build</a>
     </td>
     <td>
-        <a href="{{ repoStatusUrl }}">{{ repoName }}</a>
+        <a href="{{ appStatusUrl }}">{{ appName }}</a>
     </td>
     <td>
         <span class="{{ buildStatusStyle }}" data-build="{{ buildId }}">{{  buildStatus }}</span>
