--- a/public/views/queue.push.html
+++ b/public/views/queue.push.html
@@ -3,7 +3,7 @@
         <a href="{{ pushUrl }}">Push</a>
     </td>
     <td>
-        <a href="{{ repoStatusUrl }}">{{ repoName }}</a>
+        <a href="{{ appStatusUrl }}">{{ appName }}</a>
     </td>
     <td>
         <span class="{{ pushStatusStyle }}" data-push="{{ pushId }}">{{  pushStatus }}</span>
